[tool.poetry]
name = "bustracker"
version = "0.1.0"
description = "An app to display MBTA bus arrival times"
authors = ["Sean Rawson <seancc8@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
flask-login = "^0.6.2"
python-dotenv = "^0.21.1"
flask-bootstrap = "^3.3.7.1"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
flask-mailing = "^0.2.2"
flask-session2 = "^1.3.1"
flask-wtf = "^1.1.1"
protobuf = "^4.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
tox = "^4.4.5"
tox-docker = "^4.0.0"
pytest-cov = "^4.0.0"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
